[gd_scene load_steps=10 format=3 uid="uid://dsqnhw3pojva0"]

[ext_resource type="Script" path="res://tests/nodes/RigidBody/tests/3d/continuous_detection.gd" id="1_0j003"]

[sub_resource type="BoxShape3D" id="BoxShape3D_nntpe"]
size = Vector3(5000, 0.1, 5000)

[sub_resource type="BoxMesh" id="BoxMesh_eg120"]
size = Vector3(5, 0.1, 5)

[sub_resource type="BoxShape3D" id="BoxShape3D_my50r"]
size = Vector3(0.4, 0.4, 0.4)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sdx21"]
albedo_color = Color(1, 0, 0.196078, 1)

[sub_resource type="BoxMesh" id="BoxMesh_fj3mp"]
material = SubResource("StandardMaterial3D_sdx21")
size = Vector3(0.4, 0.4, 0.4)

[sub_resource type="BoxShape3D" id="BoxShape3D_q5jy7"]
size = Vector3(0.4, 0.4, 0.4)

[sub_resource type="BoxMesh" id="BoxMesh_uv52p"]
size = Vector3(0.4, 0.4, 0.4)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_px3sa"]
albedo_color = Color(1, 0, 0.0823529, 1)

[node name="continuous_detection" type="Node3D"]
script = ExtResource("1_0j003")

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.99181, 10.2521)
current = true

[node name="HorizontalStaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, 0, 2, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="HorizontalStaticBody3D"]
shape = SubResource("BoxShape3D_nntpe")

[node name="MeshInstance3D" type="MeshInstance3D" parent="HorizontalStaticBody3D"]
mesh = SubResource("BoxMesh_eg120")

[node name="HorizontalRigidBody3D" type="RigidBody3D" parent="."]
transform = Transform3D(0.5, -0.5, 0.707107, 0.707107, 0.707107, 0, -0.5, 0.5, 0.707107, -10, 1.996, 0)
continuous_cd = true
max_contacts_reported = 1
contact_monitor = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="HorizontalRigidBody3D"]
shape = SubResource("BoxShape3D_my50r")

[node name="MeshInstance3D" type="MeshInstance3D" parent="HorizontalRigidBody3D"]
mesh = SubResource("BoxMesh_fj3mp")

[node name="VerticalStaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, -5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="VerticalStaticBody3D"]
shape = SubResource("BoxShape3D_nntpe")

[node name="MeshInstance3D" type="MeshInstance3D" parent="VerticalStaticBody3D"]
mesh = SubResource("BoxMesh_eg120")

[node name="VerticalRigidBody3D" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, -0.707107, 0, 0.707107, 0.707107, 8, 8, 0)
continuous_cd = true
max_contacts_reported = 1
contact_monitor = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="VerticalRigidBody3D"]
shape = SubResource("BoxShape3D_q5jy7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="VerticalRigidBody3D"]
mesh = SubResource("BoxMesh_uv52p")
surface_material_override/0 = SubResource("StandardMaterial3D_px3sa")
